docs/wemake-python-styleguide/0.14.0/violations/naming/WPS121.md
---
code: WPS121
internalName: UnusedVariableIsUsedViolation
title: 'Found usage of a variable marked as unused: _'
---

Forbids to have use variables that are marked as unused.

We discourage using variables that start with `_` only inside functions
and methods as local variables.

However, we allow to use `_` because tools like `ipython`, `babel`, and
`django` enforce it.

## Reasoning
Sometimes you start to use new logic in your functions, and you
start to use variables that once were marked as unused. But, you
have not renamed them for some reason. And now you have a lot of
confusion: the variable is marked as unused, but you are using it.
Why? What's going on?

## Solution
Rename your variable to be a regular variable without a leading
underscore. This way it is declared to be used.

> ## Example
> 
>     # Correct:
>     def function():
>         first = 15
>         return first + 10
>     
>     # Wrong:
>     def function():
>         _first = 15
>         return _first + 10

This rule checks: functions, methods, and `lambda` functions.

<div class="versionadded">

0.7.0

</div>

<div class="versionchanged">

0.12.0

</div>

<div class="versionchanged">

0.14.0

</div>